glibc (2.6.1-3) unstable; urgency=low

  * sysdeps/amd64.mk: uses x86_64 headers also for the i486 flavour now
    that they are compatible.
  * sysdeps/i386.mk: uses x86_64 headers also for the main flavour.
  * debian/local/etc_default/locale: remove.  Closes: bug#441360.
  * debian/rules.d/debhelper.mk: modify nscd/DEBIAN/control during build
    to workaround a dpkg-shlibdeps bug.  Closes: bug#433723.
  * debian/local/manpages/nscd.conf.5: document the persistent and shared
    cache options.  Closes: bug#338504.
  * patches/all/local-alias-UTF-8.diff: encode locales.alias in UTF-8.
    Closes: bug#404433.
  * debhelper.in/locales.links, debhelper.in/locales.install: move
    locales.alias into /etc and provide a symlink in
    /usr/share/locale/locale.alias.
  * patches/localedata/tailor-iso14651_t1.diff: fix fi_FI locale.  Closes:
    bug#441026.

 -- Aurelien Jarno <aurel32@debian.org>  Sun,  9 Sep 2007 17:23:45 +0200

glibc (2.6.1-2) unstable; urgency=low

  [ Samuel Thibault ]
  * Rename hurd-i386/submitted-lock-intern.diff into
    hurd-i386/cvs-lock-intern.diff, hurd-i386/submitted-ECANCELED.diff
    into hurd-i386/cvs-ECANCELED.diff and
    hurd-i386/submitted-sigsuspend-nocancel.diff into
    hurd-i386/cvs-sigsuspend-nocancel.diff as the patches have been accepted
    upstream.
  * hurd-i386/local-tls-support.diff: update to fix TLS leak in /hurd/exec
    server.
  * hurd-i386/cvs-ioctl-delay.diff: new patch to add standard *DLY ioctl macros.
  * hurd-i386/submitted-IPV6_PKTINFO.diff: new patch to add standard
    IPV6_PKTINFO macro.

  [ Aurelien Jarno ]
  * debian/rules.d/build.mk: disable testsuite on ARM machines running a
    2.6.21 or 2.6.22 kernel.
  * debian/debhelper.in/locales.{prerm,postinst}: look for supported.tar.lzma
    instead of supported.tar.gz.
  * debian/local/etc_default/devpts: remove.
  * debian/local/etc_default/locale: new file.  Closes: bug#437404.
  * debhelper.in/locales.install: install it.