@@ -4,6 +4,8 @@ glibc (2.6.1-3) unstable; urgency=low
     that they are compatible.
   * sysdeps/i386.mk: uses x86_64 headers also for the main flavour.
   * debian/local/etc_default/locale: remove.  Closes: bug#441360.
+  * sysdeps/*.mk: don't provide include symlink for bi-arch, but only
+    an empty directory.
   * debian/rules.d/debhelper.mk: modify nscd/DEBIAN/control during build
     to workaround a dpkg-shlibdeps bug.  Closes: bug#433723.
   * debian/local/manpages/nscd.conf.5: document the persistent and shared
@@ -16,7 +18,7 @@ glibc (2.6.1-3) unstable; urgency=low
   * patches/localedata/tailor-iso14651_t1.diff: fix fi_FI locale.  Closes:
     bug#441026.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun,  9 Sep 2007 17:23:45 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun,  9 Sep 2007 18:09:26 +0200
 
 glibc (2.6.1-2) unstable; urgency=low
 
